--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="org.ieee.c3.teamchooser.NewPersonActivity"
+            android:label="Blah">
+        </activity>
     </application>
 
 </manifest>
