--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="org.ieee.c3.teamchooser"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="16" />
@@ -24,7 +24,7 @@
         </activity>
         <activity
             android:name="org.ieee.c3.teamchooser.NewPersonActivity"
-            android:label="Blah">
+            android:label="New Person">
         </activity>
     </application>
 
